# hexuria

./: .gitignore  Cargo.toml  HANDOFF_TRACK_C.md  Makefile  PROJECT_STATUS.md  PayPlan-Platform-PRD-v2.md  README.md  REMEDIATION_PLAN.md
.github/workflows/: ci.yml
crates/payplan_app/: Cargo.toml
crates/payplan_app/src/: auth.rs  commands.rs  engine.rs  error.rs  lib.rs  ports.rs  queries.rs
crates/payplan_app/tests/: atomicity.rs  purchase_flow.rs
crates/payplan_core/: Cargo.toml
crates/payplan_core/src/: error.rs  lib.rs  sqlx_impls.rs  validation.rs
crates/payplan_core/src/modules/: mod.rs  sponsor.rs
crates/payplan_core/src/modules/binary/: carryover.rs  carryover_module.rs  mod.rs  pairing.rs  pairing_module.rs  tree.rs  tree_module.rs  volume.rs  volume_module.rs
crates/payplan_core/src/modules/royal/: duplication.rs  duplication_module.rs  flushline.rs  flushline_module.rs  matrix.rs  matrix_module.rs  mod.rs  pot_bonus.rs  pot_bonus_module.rs
crates/payplan_core/src/payplan/: events.rs  ledger.rs  mod.rs  module.rs  registry.rs  runner.rs  stack.rs
crates/payplan_core/src/platform/: catalog.rs  company.rs  enrollment.rs  entitlement.rs  mod.rs  package.rs  purchase.rs  subscription.rs  user.rs
crates/payplan_core/src/shared/: ids.rs  mod.rs  money.rs  period.rs
crates/payplan_core/tests/: proptest_carryover.rs  proptest_duplication.rs  proptest_flushline.rs  proptest_pairing.rs  proptest_pot_bonus.proptest-regressions  proptest_pot_bonus.rs  proptest_tree.rs  proptest_volume.rs  stack_e2e.rs
crates/payplan_infra/: Cargo.toml
crates/payplan_infra/migrations/: 0004_binary_modules.sql  0006_binary_nodes_cycle_count.sql  0007_royal_pot_bonus_balances.sql  0008_revoked_jti.sql  0009_numeric_commission_columns.sql  0010_drop_company.sql
crates/payplan_infra/src/: admin_queries.rs  aggregate_repos.rs  auth.rs  event_store.rs  ledger_store.rs  lib.rs  migrator.rs  module_state_store.rs  operations.rs  payments.rs  postgres.rs  projections.rs  purchase_writer.rs  repos.rs  scheduler.rs
crates/payplan_infra/tests/: atomic_purchase.rs  auth.rs  event_store_round_trip.rs  operations.rs  persistent_state.rs  projections.rs
crates/payplan_server/: Cargo.toml
crates/payplan_server/src/: main.rs  ui_http.rs
crates/payplan_ui/: Cargo.toml
crates/payplan_ui/src/: lib.rs  shell.rs
crates/payplan_ui/src/app/: mod.rs  request.rs  router.rs
crates/payplan_ui/src/components/: feedback.rs  forms.rs  layout.rs  mod.rs  navigation.rs  tables.rs
crates/payplan_ui/src/islands/: mod.rs  theme.rs
crates/payplan_ui/src/pages/: auth.rs  dashboard.rs  jobs.rs  landing.rs  lists.rs  login.rs  mod.rs
crates/payplan_ui/style/: tailwind.css
crates/payplan_web/: Cargo.toml
crates/payplan_web/src/: context.rs  handlers.rs  lib.rs  routes.rs  server_fns.rs  session.rs  views.rs
crates/payplan_web/tests/: auth.rs
docs/: ARCHITECTURE.md  BINARY_STACK.md  IMPLEMENTATION_PROCESS.md  MODULE_CONTRACT.md  PRD.md  PRODUCT_PACKAGE_MODEL.md  ROYAL_FLUSH_STACK.md  STACK_EXAMPLES.md  leptos-advanced-features-guide.md  leptos-islands-ui-design.md
docs/baselines/: leptos-ui-phase0-2026-06-22.json
migrations/: 0001_platform.sql  0002_commerce_enrollment_ledger.sql  0003_royal_modules.sql  0005_module_state.sql  0011_product_payplan_allocations.sql  0012_packages_drop_stack.sql  0013_reward_ledger_points_only.sql
scripts/: ui-asset-baseline.sh  ui-route-baseline.sh
seeds/: dev.sql
