[package]
name = "payplan_app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
payplan_core = { path = "../payplan_core" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
rust_decimal.workspace = true
anyhow.workspace = true
sqlx.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
rstest.workspace = true
proptest.workspace = true
anyhow.workspace = true
rust_decimal_macros = "1"
