[package]
name = "payplan_core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
sqlx = ["dep:sqlx"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
rust_decimal.workspace = true
sqlx = { workspace = true, optional = true }
regex-lite = "0.1"

[dev-dependencies]
pretty_assertions.workspace = true
proptest.workspace = true
rstest.workspace = true
rust_decimal_macros = "1"
