[package]
name = "payplan_ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
hydrate = [
  "leptos/hydrate",
  "dep:console_error_panic_hook",
  "dep:wasm-bindgen",
]
ssr = [
  "leptos/ssr",
  "leptos/nonce",
  "dep:axum",
  "dep:leptos_meta",
  "dep:leptos_router",
  "dep:leptos_axum",
  "dep:serde_urlencoded",
  "dep:chrono",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "dep:payplan_app",
  "dep:payplan_core",
  "dep:payplan_web",
]

[dependencies]
leptos.workspace = true
serde.workspace = true
console_error_panic_hook = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
leptos_meta = { workspace = true, optional = true }
leptos_router = { workspace = true, optional = true }
leptos_axum = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
serde_urlencoded = { version = "0.7", optional = true }
chrono = { workspace = true, optional = true }
payplan_app = { path = "../payplan_app", optional = true }
payplan_core = { path = "../payplan_core", optional = true }
payplan_web = { path = "../payplan_web", optional = true }
