[package]
name = "payplan_web"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
integration = []

[dependencies]
payplan_core = { path = "../payplan_core" }
payplan_app = { path = "../payplan_app" }
payplan_infra = { path = "../payplan_infra" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true
sqlx.workspace = true
rust_decimal.workspace = true
async-trait.workspace = true
jsonwebtoken.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
rstest.workspace = true
tower = { workspace = true, features = ["util"] }
http-body-util = "0.1"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
